add preprocessor tools & temporarily combine two htmls as 'Split'

--- a/test/client/BeiBei.html
+++ b/test/client/BeiBei.html
@@ -120,8 +120,8 @@
 			</div>
 		</div>
 		<div id="__Page18__fullscreen" class="tab-inner">
-			<!--b class="touch __Page6__bill_word" onclick="change_page(1)">Page11</b>
-		<b class="touch __Page6__bill_word" onclick="change_page(2)">Page22</b-->
+			<!--<b class="touch __Page6__bill_word" onclick="change_page(1)">Page11</b>
+			<b class="touch __Page6__bill_word" onclick="change_page(2)">Page22</b>-->
 
 			<div id="__Page18__text_bill__container">
 				<p id="__Page18__bill_word" class="__Page18__bill_word">分帳結果</p>
@@ -158,10 +158,10 @@
 					<p class="__Page18__bill_word">確認發送</p>
 				</div>
 			</div>
-			<!--div id="__Page18__result3-2__container">
-		  <img class="__Page7__inform__noteimg" src="./midterm_icon/notification.png" alt="梗圖欄">
-		  __Page7__inform__container
-		</div-->
+			<!--<div id="__Page18__result3-2__container">
+			<img class="__Page7__inform__noteimg" src="./midterm_icon/notification.png" alt="梗圖欄">
+			__Page7__inform__container
+			</div>-->
 
 			<div id="__Page18__result3-2__container">
 				<div id="__Page18__inform__bar">
