--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -27,12 +27,12 @@
           <h3 id="title-normal">建立新帳號</h3><br>
           <form id="form-normal" action="/" method="post">
             <label>
-              <input class="lively" type="email" name="email" value="" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,}$" required="">
+              <input class="register-form" type="email" name="email" value="" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,}$" required="">
             </label><br><br>
             <label>
-              <input class="lively" type="password" name="pwd" value="" placeholder="Password" pattern="[A-Za-z0-9]{8,}" required="">
+              <input class="register-form" type="password" name="pwd" value="" placeholder="Password" pattern="[A-Za-z0-9]{8,}" required="">
             </label><br><br>
-            <button class="lively brand-color" id="form-submit" type="button" onclick="window.location='#__Register__wallet__container'">註冊</button><br><br>
+            <button class="register-btn brand-color" id="form-submit" type="button" onclick="window.location='#__Register__wallet__container'">註冊</button><br><br>
           </form>
         </div>
         <div id="__Register__form-quick__container">
@@ -42,9 +42,9 @@
         <!-- flex-->
         <div id="__Register__wallet__container">
           <div id="__walletInfo__bar">
-            <div class="user-icons lively" id="usericon"><i class="fas fa-user"></i></div><br><br><span id="username">darbyishandsome@gmail.com</span>
+            <div class="register-btn user-icons-large" id="usericon"><img src="./midterm_icon/user-icon.png" alt="user icon"></div><br><span id="username">darbyishandsome@gmail.com</span>
           </div>
-          <div id="__walletMenu__bar"><a class="menu-flex lively" href="#__Register__join-wallet__container" target="_top"><span>加入錢包</span></a><a class="menu-flex lively" href="#__Register__new-wallet__container" target="_top"><span>新增錢包</span></a></div>
+          <div id="__walletMenu__bar"><a class="menu-flex register-btn" href="#__Register__join-wallet__container" target="_top"><span>加入錢包</span></a><a class="menu-flex register-btn" href="#__Register__new-wallet__container" target="_top"><span>新增錢包</span></a></div>
           <div class="banner-padding" id="__wallet__banner"><img class="brand-logo" src="./midterm_icon/split_smalllogo.png" alt="brand logo"></div>
         </div>
         <!-- -->
@@ -54,7 +54,7 @@
             <form id="join-wallet" action="/" method="get">
               <input class="enter_button" type="text" name="IDcode" value="" placeholder="輸入ID CODE" pattern="[a-z0-9]{6,}" required="">
               <!-- <input type="submit" onclick="" hidden>-->
-              <button class="lively brand-color wallet_submit" id="join-wallet-submit" type="button" onclick="change_page(2);">確認</button>
+              <button class="register-btn wallet_submit" id="join-wallet-submit" type="button" onclick="change_page(2);">確認</button>
             </form>
           </div>
           <div class="banner-padding" id="__joinWallet__banner"><img class="brand-logo" src="./midterm_icon/split_smalllogo.png" alt="brand logo"></div>
@@ -64,9 +64,9 @@
           <div id="__newWallet__bar">
             <p>新增錢包</p>
             <form id="new-wallet" action="/" method="get">
-              <input class="enter_button" type="text" name="Wallet" value="" placeholder="創建錢包名稱" required="">
+              <input class="enter_button" type="text" name="Wallet" value="" placeholder="輸入錢包名稱" required="">
               <!-- <input type="submit" onclick="" hidden>-->
-              <button class="lively brand-color wallet_submit" id="new-wallet-submit" type="button" onclick="change_page(2);">確認</button>
+              <button class="register-btn wallet_submit" id="new-wallet-submit" type="button" onclick="change_page(2);">確認</button>
             </form>
           </div>
           <div class="banner-padding" id="newWallet__banner"><img class="brand-logo" src="./midterm_icon/split_smalllogo.png" alt="brand logo"></div>
@@ -146,7 +146,7 @@
       <div class="tab-inner" id="__Mainpage__overview__container">
         <div id="__overview__header__bar"><span id="overview_title">錢包總覽</span></div>
         <div id="__overview__flexbox__bar"><a class="flex-item" href="#">丁丁家</a><a class="flex-item" target="_top" onclick="change_page(0)">台南租嗚</a></div>
-        <div id="__overview__footer__bar"><a class="__Page__menu__word" id="join-wallet-request" onclick="javascript:window.location.href=&quot;#__Register__join-wallet__container&quot;; change_page(5); DisplayWallet(2);"><span>加入錢包</span></a><span class="between"></span><a class="__Page__menu__word" id="new-wallet-request" onclick="javascript:window.location.href=&quot;#__Register__new-wallet__container&quot;; change_page(5);"><span>新增錢包</span></a></div>
+        <div id="__overview__footer__bar"><a class="__Page__menu__word" id="join-wallet-request" onclick="javascript:window.location.href='#__Register__join-wallet__container';change_page(5);"><span>加入錢包</span></a><span class="between"></span><a class="__Page__menu__word" id="new-wallet-request" onclick="javascript:window.location.href='#__Register__new-wallet__container';change_page(5);"><span>新增錢包</span></a></div>
       </div>
       <div class="tab-inner" id="__Page18__fullscreen">
         <!--
@@ -264,7 +264,7 @@
                 </li>
               </ul>
             </div>
-            <button class="menu-flex lively" id="spending-confirm" type="button" onclick="change_page(0);add_notificationimg();">確認記帳</button>
+            <button class="menu-flex_temp lively" id="spending-confirm" type="button" onclick="change_page(0);add_notificationimg();">確認記帳</button>
           </form>
         </div>
         <div id="manualTrack__timer__bar"><span id="current_date"></span></div>
@@ -290,9 +290,9 @@
         -->
       </div>
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="./app_register.js"></script>
     <script src="./app_BeiBei.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./mainpage.js"></script>
     <script src="BeiBei.js"></script>
   </body>
