--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -100,14 +100,32 @@
         </div>
       </div>
       <div class="tab-inner" id="__Page7__fullscreen">
-        <div id="__Page7__moneyimg__container"><img class="__Page7__moneyimg" src="./midterm_icon/split_mainlogo.png" alt="錢包圖片"></div>
+        <div id="__Page7__moneyimg__container"><img class="__Page7__moneyimg" src="./midterm_icon/split_mainlogo.png" alt="錢包圖片" onclick="add_notification()"></div>
         <div id="__Page7__inform__container">
           <div id="__Page7__inform__bar">
             <!-- img class="__Page7__inform__noteimg" src="./midterm_icon/notification.png" alt="通知欄"-->
             <div id="__Page7__inform">
-              <label class="__Page7__informphoto" id="delete_id"><img id="__Page7__informimg" src="./midterm_photo/Frame 191.png" alt="錢包圖片"></label>
-              <label class="__Page7__informphoto" id="delete_id"><img id="__Page7__informimg" src="./midterm_photo/Frame 192.png" alt="錢包圖片"></label>
-              <label class="__Page7__informphoto" id="delete_id"><img id="__Page7__informimg" src="./midterm_photo/Frame 193.png" alt="錢包圖片"></label>
+              <label id="delete_id" class="__Page7__informphoto">
+				<div id="__Page7__informphoto"><img class="__Page7__informphotoimg" src="./midterm_photo/ppl-07.png" alt="大頭照"></div>
+				  <div id="__Page7__informtext">
+					<p class="__Page7__informtextmoney">$3260</p>
+					<p class="__Page7__informtextquote">丁丁新增了一筆水電項目</p>
+				  </div>
+				<div id="__Page7__informtime">
+				  <p class="__Page7__informdate">5/25</p>
+				</div>
+			  </label>
+						
+			  <label id="delete_id" class="__Page7__informphoto">
+				<div id="__Page7__informphoto"><img class="__Page7__informphotoimg" src="./midterm_photo/ppl-07.png" alt="大頭照"></div>
+				<div id="__Page7__informtext">
+				  <p class="__Page7__informtextmoney">$3260</p>
+				  <p class="__Page7__informtextquote">丁丁新增了一筆水電項目</p>
+				</div>
+				<div id="__Page7__informtime">
+				  <p class="__Page7__informdate">5/25</p>
+				</div>
+			  </label>
             </div>
           </div>
         </div>
