Link icon and manifest in raw html

--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mainpage</title>
+    <link rel="apple-touch-icon" size="180x180" href="midterm_icon/split_applogo.png">
+    <link rel="icon" type="image/png" size="32x32" href="midterm_icon/split_applogo.png">
+    <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="./mainpage_style.css">
