change keyboard inputmode for decimal only

--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -262,7 +262,7 @@
             <div id="basis_infos">
               <input class="account_name" id="account_name" type="text" name="account_name" placeholder="帳目名稱">
               <label for="account_name"><img src="./midterm_icon/edit.png" alt="cancel" onclick=""></label>
-              <input id="account_cost" type="text" name="account_cost" placeholder="$ 0">
+              <input id="account_cost" type="text" name="account_cost" inputmode="decimal" placeholder="$ 0">
               <hr class="break_style1">
             </div>
             <div id="other_infos">
